Added: HTML page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="graphs_container">
              <div class="card", id="pie_graph_age1">
-                 <img src="NbissuesByUser.png" width=500 hight=500 />
+                 <img src="dataPlot/NbIssuesPerTime.png" width=500 hight=500 />
             </div>
             <div class="card" id="bar_graph1">
                 <div id="bar_chart1">
