Updated: HTML page

--- a/index.html
+++ b/index.html
@@ -12,92 +12,122 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="title">Projet Info Vis</h1>
-        <div id="credits">
-            <p>Réalisé par <span class="name">Samah KANSAB</span></p>
-            <a href="https://github.com/samah37/railsIssues.git"><i class="fab fa-github fa-2x"></i></a>
+<header>
+    <h1 id="title">Projet Info Vis</h1>
+    <div id="credits">
+        <p>Réalisé par <span class="name">Samah KANSAB</span></p>
+        <a href="https://github.com/samah37/railsIssues.git"><i class="fab fa-github fa-2x"></i></a>
+    </div>
+</header>
+<main>
+    <h1><span class="important">Nom de la page</span></h1>
+    <div class="graphs_container">
+        <div class="card" id="bar_graph">
+            <div id="bar_chart">
+                <h2>Ton titre</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
+            </div>
         </div>
-    </header>
-    <main>
-        <h1><span class="important">Nom de la page</span></h1>
-        <div class="graphs_container">
-            <div class="card" id="bar_graph">
-                <div id="bar_chart">
-                    <h2>Ton titre</h2>
-			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
-            </div>
-            <div class="card", id="pie_graph_age">
+        <div class="card" , id="pie_graph_age">
 
-		<img src="dataPlot/OccurencesByLabels.png" width=100% hight=90% />
+            <img src="dataPlot/OccurencesByLabels.png" width=100% hight=90%/>
+        </div>
+    </div>
+    <div class="graphs_container">
+        <div class="card" , id="pie_graph_age1">
+            <img src="dataPlot/NbIssuesPerTime.png" width=100% hight=90%/>
+        </div>
+        <div class="card" id="bar_graph1">
+            <div id="bar_chart1">
+                <h2>Ton titre</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
             </div>
         </div>
-        <div class="graphs_container">
-             <div class="card", id="pie_graph_age1">
-                 <img src="dataPlot/NbIssuesPerTime.png" width=100% hight=90% />
+
+
+        <div class="card" id="bar_graph3">
+            <div id="bar_chart3">
+                <h2>Ton titre</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
             </div>
-            <div class="card" id="bar_graph1">
-                <div id="bar_chart1">
-                    <h2>Ton titre</h2>
-			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
+        </div>
+        <div class="card" , id="pie_graph_age2">
+
+            <img src="dataPlot/NbissuesByUser.png" width=100% hight=90%/>
+        </div>
+         <div class="card" , id="pie_graph_age4">
+            <img src="dataPlot/NbIssuesPerTimeSU.png" width=100% hight=90%/>
+        </div>
+        <div class="card" id="bar_graph2">
+            <div id="bar_chart2">
+                <h2>Ton titre</h2>
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
             </div>
+        </div>
+    </div>
 
+</main>
+<footer>
 
-         <div class="card" id="bar_graph3">
-                <div id="bar_chart3">
-                    <h2>Ton titre</h2>
-			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-			when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-			and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
-            </div>
-            <div class="card", id="pie_graph_age2">
-
-		<img src="dataPlot/NbissuesByUser.png" width=100% hight=90% />
-            </div>
-             </div>
-
-    </main>
-    <footer>
-
-    </footer>
+</footer>
 </body>
 
 </html>
