--- a/index.html
+++ b/index.html
@@ -13,114 +13,132 @@
 
 <body>
 <header>
-    <h1 id="title">Projet Info Vis</h1>
+    <h1 id="title">Programming assignment</h1>
     <div id="credits">
         <p>Réalisé par <span class="name">Samah KANSAB</span></p>
         <a href="https://github.com/samah37/railsIssues.git"><i class="fab fa-github fa-2x"></i></a>
     </div>
 </header>
 <main>
-    <h1><span class="important">Nom de la page</span></h1>
+    <h1><span class="important"> A study of the issues related to the rails project</span></h1>
     <div class="graphs_container">
-        <div class="card" id="bar_graph">
-            <div id="bar_chart">
-                <h2>Ton titre</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.</p>
+
+        <div class="card" id="bar_graph1">
+            <div id="bar_chart1">
+                <h2>How do the number of issues evolve across time?</h2>
+                <p> The graph illustrates the evolution of the number of the last 500 reported issues between 05-2017
+                    and 03-2022 divided into periods of 3 months.
+                    Overall, the number of issues from 2017 to 2020 was slightly stable between 5 and 20. At the end of
+                    2020, there was a sharp rise in the number of issues. The latter has slumped since the beginning of
+                    the year 2022, the number of reported issues has decreased from 140 to 100.
+                    In 2017, the number of issues was nearly 5 (1%). Over the following three years (05/2017-05/2020),
+                    there is a gradual fluctuation in the number of the issues which varies between 5 and 20
+                    approximately, the global percentage in this period is almost 40%. Between 05/2020 and 08/2020, we
+                    notice that the number of issues has slightly exceeded 20 but it decreases to 15 in the next 3
+                    months. From 11/2020 to 01/2022, the number of issues has incredibly increased to reach
+                    approximately 140 issues at the end of 2020 which is 28% of the total number. The number of issues
+                    has decreased in the last period from 140 to 100 which represents 10% of the total number.
+
+                </p>
+            </div>
+            <div id="bar_chart5">
+                <h2>Are there any periods in which we get more issues?</h2>
+                <p>
+                    According to the previous graph, we notice that in the last years (2020-2022) more issues has been
+                    reported in this repository , if we relate this with the current conditions we can say that the
+                    github has become more active in general terms because of the remote work due to the pandemic
+                    (Covid-19). In this period, the rails project contributors and developers asked their problems and
+                    issues online to get a coherent answer.
+                </p>
             </div>
         </div>
-        <div class="card" , id="pie_graph_age">
-
-            <img src="dataPlot/OccurencesByLabels.png" width=100% hight=90%/>
-        </div>
-    </div>
-    <div class="graphs_container">
         <div class="card" , id="pie_graph_age1">
             <img src="dataPlot/NbIssuesPerTime.png" width=100% hight=90%/>
         </div>
-        <div class="card" id="bar_graph1">
-            <div id="bar_chart1">
-                <h2>Ton titre</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.</p>
+    </div>
+    <div class="graphs_container">
+        <div class="card" , id="pie_graph_age6">
+            <img src="dataPlot/OccurencesByLabels.png" width=100% hight=90%/>
+        </div>
+        <div class="card" id="bar_graph6">
+            <div id="bar_chart6">
+                <h2>What is the most popular category (label)?</h2>
+                <p> The bar chart illustrates the occurences of each label in the last 500 issues of rails project.
+                    It can be seen that there are labels more popular than others. Starting with the least used labels,
+                    we can notice that there are categories which are used only one to fifteen times such as:
+                    thirdpartyissues, il8n, actionmailer ..ect. When we find that there are labels which are used
+                    between twenty and one hundred. For example: attachedPR, docs … ect. At the end we find the
+                    activerecord label which is used 208 times.
+                    To answer the question, activerecord is the most popular category (208 times). We can explain this
+                    by saying that most of the problems found by users are in the class of activerecord. These labels
+                    will allow the project manager to update his code by modifying the part where the majority find an
+                    issue.
+                </p>
             </div>
         </div>
-
-
+    </div>
+    <div class="graphs_container">
         <div class="card" id="bar_graph3">
             <div id="bar_chart3">
-                <h2>Ton titre</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.</p>
+                <h2>Is there anyone who reports more issues than others?</h2>
+                <p> The graph illustrates the number of issues reported by each user (of the last 500 issues) where each
+                    user is represented by his unique identifier (User ID). A user reports at least one issue.
+                    Overall, we can notice that there are 368 users on 500 issues. So, automatically there are users who
+                    have reported more than one issue. According to the graph, we can also observe that 83% of users
+                    have reported one issue and 17% have reported a variety of issues (10, 5, 3 …). The user with ID
+                    771968 has reported 19 issues more than all the other users.
+                    To answer the question, we can say that yes, there is a user who reports more issues than others. In
+                    this case he is the user with ID 771968 who has reported 19 issues.
+                    We can explain these results by saying that there are users who have more issues than others when
+                    trying to run the project and this can be related to their working environment, setups, machine
+                    performances, skills … etc.
+                </p>
             </div>
         </div>
         <div class="card" , id="pie_graph_age2">
 
             <img src="dataPlot/NbissuesByUser.png" width=100% hight=90%/>
         </div>
-         <div class="card" , id="pie_graph_age4">
+    </div>
+    <div class="graphs_container">
+        <div class="card" , id="pie_graph_age4">
             <img src="dataPlot/NbIssuesPerTimeSU.png" width=100% hight=90%/>
         </div>
         <div class="card" id="bar_graph2">
             <div id="bar_chart2">
-                <h2>Ton titre</h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.</p>
+                <h2>How issues apparition evolves compared to their status change and discussion activity across the
+                    time?</h2>
+                <p> The graph illustrates the evolution of the number of the last 500 reported, updated and closed
+                    issues and the comments number between 05-2017 and 03-2022 divided into periods of 3 months.
+                    Overall, we notice that in all the period of the time, the 500 issues have been updated but no issue
+                    has been closed. For the comments number, it is so observable that it is related to the number of
+                    the issues. The number of comments from 2017 to 2020 was in oscillation between 20 and 200. Between
+                    05/2020 and 08/2020 the number of comments increased to 300 approximately. At the end of 2020, there
+                    was a sharp rise in the number of issues and comments together which have increased since the
+                    beginning of the year 2022, the number of reported issues and comments have decreased from 140 to
+                    100 and from more than 500 to less than 200 respectively.
+                    To answer the question, we can say that the issues on github are not all closed because the problem
+                    exists already, also the comments number shows that more issues are reported the more the repository
+                    is active with more interactions. The issues on github are not ignored by the users and they all
+                    collaborate to find a solution to these issues by commenting, asking and updating their
+                    interactions.
+                </p>
             </div>
+        </div>
+    </div>
+    <div class="card" id="bar_graph9">
+        <div id="bar_chart9">
+            <h2>Synthesis</h2>
+            <p> At the end of this study we can conclude that github is a very good tool which has many advantages
+                proven by the analyzes made previously. During this project, we learned that the github facilitates
+                collaboration between users by allowing them to report an issue, comment on it and update it in order to
+                help the user to achieve the desired result easily. In addition, we find that the activity of users
+                differs from one user to another which surely has several reasons citing among them: user experience,
+                user environment, …ect. Through this study, we noticed that during the pandemic the activity on github
+                doubled several times, which showed us that collaboration has no limits, if you have a project just put
+                it in github and you can track it and interact with different users around the world on github.
+
+            </p>
         </div>
     </div>
 
