--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <h1 id="title">Programming assignment</h1>
     <div id="credits">
-        <p>Réalisé par <span class="name">Samah KANSAB</span></p>
+        <p>By <span class="name">Samah KANSAB</span></p>
         <a href="https://github.com/samah37/railsIssues.git"><i class="fab fa-github fa-2x"></i></a>
     </div>
 </header>
