Updated: ReadMe file

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
 <header>
-    <h1 id="title">Programming assignment</h1>
+    <h1 id="title">Programming Assignment</h1>
     <div id="credits">
         <p>By <span class="name">Samah KANSAB</span></p>
         <a href="https://github.com/samah37/railsIssues.git"><i class="fab fa-github fa-2x"></i></a>
     </div>
 </header>
 <main>
-    <h1><span class="important"> A study of the issues related to the rails project</span></h1>
+    <h1><span class="important"> A Study of the Issues Related to the Rails Project</span></h1>
     <div class="graphs_container">
 
         <div class="card" id="bar_graph1">
@@ -32,23 +32,25 @@
                     2020, there was a sharp rise in the number of issues. The latter has slumped since the beginning of
                     the year 2022, the number of reported issues has decreased from 140 to 100.
                     In 2017, the number of issues was nearly 5 (1%). Over the following three years (05/2017-05/2020),
-                    there is a gradual fluctuation in the number of the issues which varies between 5 and 20
-                    approximately, the global percentage in this period is almost 40%. Between 05/2020 and 08/2020, we
-                    notice that the number of issues has slightly exceeded 20 but it decreases to 15 in the next 3
-                    months. From 11/2020 to 01/2022, the number of issues has incredibly increased to reach
-                    approximately 140 issues at the end of 2020 which is 28% of the total number. The number of issues
-                    has decreased in the last period from 140 to 100 which represents 10% of the total number.
+                    there is a gradual fluctuation in the number of the issues which varies approximately between 5 and
+                    20. The global percentage in this period is almost 40%. Between 05/2020 and 08/2020 we notice that
+                    the number of issues has slightly exceeded 20 but it decreases to 15 in the next 3 months. From
+                    11/2020 to 01/2022, the number of issues has incredibly increased to reach approximately 140 issues
+                    at the end of 2020 which is 28% of the total number. The number of issues has decreased in the last
+                    period from 140 to 100 which represents 10% of the total number.
+
 
                 </p>
             </div>
             <div id="bar_chart5">
                 <h2>Are there any periods in which we get more issues?</h2>
                 <p>
-                    According to the previous graph, we notice that in the last years (2020-2022) more issues has been
-                    reported in this repository , if we relate this with the current conditions we can say that the
-                    github has become more active in general terms because of the remote work due to the pandemic
-                    (Covid-19). In this period, the rails project contributors and developers asked their problems and
-                    issues online to get a coherent answer.
+                    According to the previous graph, we notice that in the last years (2020-2022) more issues have been
+                    reported in this repository. If we relate these statistics with the current conditions we can say
+                    that the github has become more active in general terms because of the remote work due to the
+                    pandemic (Covid-19). In this period, the rails project contributors and developers posed their
+                    problems and issues online to get a coherent solution.
+
                 </p>
             </div>
         </div>
@@ -87,11 +89,12 @@
                     have reported more than one issue. According to the graph, we can also observe that 83% of users
                     have reported one issue and 17% have reported a variety of issues (10, 5, 3 …). The user with ID
                     771968 has reported 19 issues more than all the other users.
-                    To answer the question, we can say that yes, there is a user who reports more issues than others. In
+                    To answer the question, we can say : “yes, there is a user who reports more issues than others. In
                     this case he is the user with ID 771968 who has reported 19 issues.
                     We can explain these results by saying that there are users who have more issues than others when
                     trying to run the project and this can be related to their working environment, setups, machine
-                    performances, skills … etc.
+                    performances, skills … etc”.
+
                 </p>
             </div>
         </div>
@@ -118,10 +121,11 @@
                     beginning of the year 2022, the number of reported issues and comments have decreased from 140 to
                     100 and from more than 500 to less than 200 respectively.
                     To answer the question, we can say that the issues on github are not all closed because the problem
-                    exists already, also the comments number shows that more issues are reported the more the repository
-                    is active with more interactions. The issues on github are not ignored by the users and they all
-                    collaborate to find a solution to these issues by commenting, asking and updating their
+                    is existing up to now. Also the comments number shows that more issues are reported the more the
+                    repository is active with more interactions. The issues on github are not ignored by the users and
+                    they all collaborate to find a solution to these issues by commenting, asking and updating their
                     interactions.
+
                 </p>
             </div>
         </div>
@@ -129,14 +133,15 @@
     <div class="card" id="bar_graph9">
         <div id="bar_chart9">
             <h2>Synthesis</h2>
-            <p> At the end of this study we can conclude that github is a very good tool which has many advantages
+            <p> At the end of this study we can conclude that github is a very useful tool which has many advantages
                 proven by the analyzes made previously. During this project, we learned that the github facilitates
                 collaboration between users by allowing them to report an issue, comment on it and update it in order to
                 help the user to achieve the desired result easily. In addition, we find that the activity of users
                 differs from one user to another which surely has several reasons citing among them: user experience,
                 user environment, …ect. Through this study, we noticed that during the pandemic the activity on github
-                doubled several times, which showed us that collaboration has no limits, if you have a project just put
-                it in github and you can track it and interact with different users around the world on github.
+                doubled several times which showed us that collaboration has no limits. So, if you have a project just
+                put it in github and you can track it and interact with different users around the world.
+
 
             </p>
         </div>
